# python-todo-app

./: app.py  pyproject.toml
migrations/versions/: 11f85643357f_.py  725061a99504_.py  c6c855195200_.py  ff47742b8fdf_.py
templates/: index.html
