[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = ["Joon Kang <denim.bluu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.9"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.22"
flask-migrate = "^4.0.5"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
mypy = "^1.6.1"
ptpython = "^3.0.23"
ipython = "^8.16.1"
notebook = "^7.0.6"
flake8 = "^6.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
files = ["src/flask_sqlalchemy", "tests"]
show_error_codes = true
pretty = true
# db.Model attribute doesn't recognize subclassing
disable_error_code = ["name-defined"]
# db.Model is Any
disallow_subclassing_any = false